--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,6 +1,5 @@
 .headline {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(246, 246, 246, 0.9) 0%,
       rgba(246, 246, 246, 1) 30%
@@ -110,11 +109,22 @@
   }
 
   .artists-ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: center;
     font-family: $font-stack-primary;
     margin-top: $spacing-3;
+    padding: 3.75%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-column-gap: 0;
+    grid-row-gap: 20px;
+
+    @media (min-width: $breakpoint-tablet) {
+      grid-template-columns: 47.5% 47.5%;
+      grid-column-gap: 5%;
+      grid-row-gap: 40px;
+    }
 
     .artist-li {
       display: flex;
