--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;0,800;1,400&display=swap");
-
 html,
 body,
 div,
@@ -175,7 +174,6 @@ a {
   background-color: #ec5242;
   transition: all 0.4s ease 0s;
 }
-
 .btn:hover {
   color: #ec5242;
   background-color: #272a31;
@@ -190,7 +188,6 @@ a {
   border: 1px solid #272a31;
   color: #272a31;
 }
-
 .btn-border:hover {
   color: #ec5242;
   border: 1px solid #ec5242;
@@ -206,7 +203,6 @@ a {
   cursor: pointer;
   transition: all 0.4s ease 0s;
 }
-
 .btn-icon-light:hover {
   color: #ec5242;
   transition: all 0.4s ease 0s;
@@ -219,7 +215,6 @@ a {
   cursor: pointer;
   transition: all 0.4s ease 0s;
 }
-
 .btn-icon-dark:hover {
   color: #ec5242;
   transition: all 0.4s ease 0s;
@@ -240,7 +235,6 @@ a {
 .container {
   padding: calc(16px * 5) calc(16px * 2);
 }
-
 @media (min-width: 768px) {
   .container {
     padding: calc(16px * 5) calc(16px * 12);
@@ -250,7 +244,6 @@ a {
 .container-header {
   padding: calc(16px * 2);
 }
-
 @media (min-width: 768px) {
   .container-header {
     padding: calc(16px * 2) calc(16px * 12);
@@ -266,70 +259,56 @@ a {
 .primary-nav {
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.1);
 }
-
 .primary-nav .container-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .primary-nav .logo-container {
   display: none;
 }
-
 .primary-nav .logo-container .logo-container-span {
   font-size: 40px;
 }
-
 .primary-nav .logo-container .logo-container-h1 {
   font-size: 40px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   color: #ec5242;
 }
-
 .primary-nav .logo-container .logo-container-h1 span {
   color: #272a31;
 }
-
 @media (min-width: 768px) {
   .primary-nav .logo-container {
     display: flex;
   }
 }
-
 .primary-nav .nav {
   display: flex;
   justify-content: space-between;
 }
-
 .primary-nav .nav .nav-btn {
   font-size: calc(16px * 2);
 }
-
 @media (min-width: 768px) {
   .primary-nav .nav .nav-btn {
     display: none;
   }
 }
-
 .primary-nav .nav .nav-ul {
   display: none;
 }
-
 .primary-nav .nav .nav-ul .nav-li {
   margin-left: calc(16px * 2);
 }
-
 .primary-nav .nav .nav-ul .nav-li a {
   color: #272a31;
   transition: all 0.4s ease 0s;
 }
-
 .primary-nav .nav .nav-ul .nav-li .nav-a {
   position: relative;
 }
-
 .primary-nav .nav .nav-ul .nav-li .nav-a::after {
   content: "";
   position: absolute;
@@ -342,24 +321,20 @@ a {
   transition: width 0.2s ease;
   -webkit-transition: width 0.2s ease;
 }
-
 .primary-nav .nav .nav-ul .nav-li .nav-a:hover {
   color: #ec5242;
   transition: all 0.4s ease 0s;
 }
-
 .primary-nav .nav .nav-ul .nav-li .nav-a:hover::after {
   width: 100%;
   left: 0;
   background: #ec5242;
 }
-
 @media (min-width: 768px) {
   .primary-nav .nav .nav-ul {
     display: flex;
   }
 }
-
 @media (min-width: 768px) {
   .primary-nav {
     background-color: #fff;
@@ -370,26 +345,21 @@ a {
   display: none;
   background-color: #272a31;
 }
-
 @media (min-width: 768px) {
   .secondary-nav {
     display: block;
   }
 }
-
 .secondary-nav .nav-sec-ul {
   justify-content: flex-end;
   display: flex;
 }
-
 .secondary-nav .nav-sec-ul .nav-sec-li {
   margin-left: 16px;
 }
-
 .secondary-nav .nav-sec-ul .nav-sec-li .nav-sec-a {
   color: #fff;
 }
-
 .secondary-nav .nav-sec-ul .nav-sec-li .nav-sec-a:hover {
   color: #ec5242;
   transition: all 0.4s ease 0s;
@@ -406,22 +376,18 @@ a {
   overflow-x: hidden;
   transition: 0.5s;
 }
-
 .mobile-menu .mobile-menu-nav .mobile-menu-btn {
   font-size: 40px;
   position: absolute;
   top: 20px;
   right: 24px;
 }
-
 .mobile-menu .mobile-menu-nav .mobile-menu-ul {
   padding-top: 48px;
 }
-
 .mobile-menu .mobile-menu-nav .mobile-menu-ul .mobile-menu-li {
   margin-bottom: 16px;
 }
-
 .mobile-menu .mobile-menu-nav .mobile-menu-ul .mobile-menu-li .mobile-menu-a {
   color: #e9e9e9;
   font-size: 30px;
@@ -429,12 +395,10 @@ a {
   font-weight: 700;
   transition: all 0.4s ease 0s;
 }
-
 .mobile-menu .mobile-menu-nav .mobile-menu-ul .mobile-menu-li .mobile-menu-a:hover {
   color: #ec5242;
   transition: all 0.4s ease 0s;
 }
-
 @media (min-width: 768px) {
   .mobile-menu {
     display: none;
@@ -444,24 +408,20 @@ a {
 .partners {
   background-color: #272a31;
 }
-
 .partners .partners-h2 {
   text-align: center;
   color: #fbfbfb;
 }
-
 .partners .partners-ul {
   padding: 16px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
 .partners .partners-ul .partners-li {
   padding: 16px;
   color: #e9e9e9;
 }
-
 .partners .partners-ul .partners-li .partners-li-img {
   height: 40px;
   width: auto;
@@ -473,12 +433,10 @@ footer .container-footer {
   flex-wrap: wrap;
   padding: calc(16px * 4) 16px;
 }
-
 footer .container-footer .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 800;
 }
-
 footer .container-footer > * {
   padding-left: calc(16px * 2);
 }
@@ -489,42 +447,35 @@ footer .container-footer > * {
   align-items: center;
   background-attachment: fixed;
 }
-
 @media (min-width: 768px) {
   .headline {
     height: 85vh;
   }
 }
-
 .headline .headline-h1 {
   margin-top: 16px;
   font-weight: 800;
   font-family: "Raleway", sans-serif;
   color: #ec5242;
 }
-
 .headline .headline-h2 {
   font-weight: 800;
   font-family: "Raleway", sans-serif;
   padding-top: 16px;
 }
-
 .headline .headline-h3 {
   color: #ec5242;
 }
-
 .headline .headline-box {
   margin-top: 16px;
   padding: 1rem;
   border: 3px solid #fff;
 }
-
 @media (min-width: 768px) {
   .headline .headline-box {
     width: 70%;
   }
 }
-
 .headline .headline-location {
   padding-top: 16px;
   font-size: 20px;
@@ -538,14 +489,12 @@ footer .container-footer > * {
   display: block;
   text-align: center;
 }
-
 @media (min-width: 768px) {
   .highlight .highlight-ul {
     display: flex;
     margin-top: 16px;
   }
 }
-
 .highlight .highlight-ul .highlight-li {
   display: flex;
   justify-content: space-evenly;
@@ -554,32 +503,27 @@ footer .container-footer > * {
   margin-top: 16px;
   padding: 16px;
 }
-
 @media (min-width: 768px) {
   .highlight .highlight-ul .highlight-li {
     flex-direction: column;
     margin: 12px;
   }
 }
-
 .highlight .highlight-ul .highlight-li .highlight-span {
   font-size: 40px;
   flex: 10%;
   text-align: center;
 }
-
 .highlight .highlight-ul .highlight-li .highlight-h3 {
   color: #ec5242 !important;
   flex: 20%;
   text-align: center;
   text-transform: capitalize;
 }
-
 .highlight .highlight-ul .highlight-li .highlight-p {
   flex: 50%;
   text-align: center;
 }
-
 .highlight .highlight-button {
   margin: 0 auto;
   margin-top: calc(16px * 3);
@@ -588,43 +532,45 @@ footer .container-footer > * {
 .artists .artists-h2 {
   text-align: center;
 }
-
 .artists .artists-p {
   text-align: center;
 }
-
 .artists .artists-ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   font-family: "Lato", sans-serif;
   margin-top: calc(16px * 3);
+  padding: 3.75%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 0;
+  grid-row-gap: 20px;
 }
-
+@media (min-width: 768px) {
+  .artists .artists-ul {
+    grid-template-columns: 47.5% 47.5%;
+    grid-column-gap: 5%;
+    grid-row-gap: 40px;
+  }
+}
 .artists .artists-ul .artist-li {
   display: flex;
   position: relative;
   margin: 0 calc(16px * 2) calc(16px * 2) 16px;
 }
-
 .artists .artists-ul .artist-li .artist-img {
   width: 120px;
   position: relative;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
   margin-right: 16px;
   transition: all 0.4s ease 0s;
 }
-
 .artists .artists-ul .artist-li .artist-img:hover {
   margin-left: 16px;
   transition: all 0.4s ease 0s;
 }
-
 .artists .artists-ul .artist-li .artist-h4 {
   font-weight: 700;
 }
-
 .artists .artists-ul .artist-li .artist-h5 {
   color: #ec5242;
   font-style: italic;
@@ -632,7 +578,6 @@ footer .container-footer > * {
   margin-top: 10px;
   font-size: small;
 }
-
 .artists .artists-ul .artist-li .artist-h6 {
   font-weight: 400;
   margin-top: 10px;
@@ -640,7 +585,6 @@ footer .container-footer > * {
   line-height: 1.2;
   color: #52555a;
 }
-
 .artists .artists-ul .artist-li::before {
   content: " ";
   background-image: url(../../assets/svg/check.svg);
@@ -656,12 +600,10 @@ footer .container-footer > * {
 .about {
   text-align: center;
 }
-
 .about .about-h3 {
   color: #ec5242;
   text-transform: uppercase;
 }
-
 .about .about-h1 {
   margin-top: 16px;
   font-weight: 800;
@@ -669,30 +611,25 @@ footer .container-footer > * {
   color: #ec5242;
   text-transform: uppercase;
 }
-
 .about .about-box {
   background-color: white;
   margin-top: 16px;
   padding: 1rem;
   border: 2px solid #e9e9e9;
 }
-
 @media (min-width: 768px) {
   .about .about-box {
     margin: 16px calc(16px * 4);
   }
 }
-
 .about .about-contact {
   margin: 16px calc(16px * 2);
 }
-
 .about .about-contact-a {
   color: #272a31;
   text-decoration: underline;
   font-weight: 700;
 }
-
 .about .about-contact-a:hover {
   color: #ec5242;
 }
@@ -702,11 +639,9 @@ footer .container-footer > * {
   background-color: #fff;
   border-bottom: 1px solid #d3d3d3;
 }
-
 .logo-about .logo-about-p {
   margin-top: 16px;
 }
-
 .logo-about .logo-container {
   margin-top: 16px;
   display: flex;
@@ -715,18 +650,15 @@ footer .container-footer > * {
   justify-content: center;
   padding: calc(16px * 2) 0;
 }
-
 .logo-about .logo-container .logo-container-span {
   font-size: 40px;
 }
-
 .logo-about .logo-container .logo-container-h1 {
   font-size: 40px;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   color: #ec5242;
 }
-
 .logo-about .logo-container .logo-container-h1 span {
   color: #272a31;
 }
@@ -735,18 +667,15 @@ footer .container-footer > * {
   text-align: center;
   background-color: #fff;
 }
-
 .past-about .past-about-p {
   margin-top: 16px;
 }
-
 .past-about .past-about-ul {
   margin-top: 16px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
 .past-about .past-about-ul .past-about-li {
   width: 100%;
   height: auto;
@@ -755,31 +684,26 @@ footer .container-footer > * {
   padding: 50px 30px;
   background-attachment: fixed;
 }
-
 @media (min-width: 768px) {
   .past-about .past-about-ul .past-about-li {
     flex: 1;
     margin: 16px;
   }
 }
-
 .past-about .past-about-ul .past-about-li .past-about-li-h2 {
   font-weight: 800;
   font-family: "Raleway", sans-serif;
 }
-
 .past-about .past-about-ul .past-about-li .past-about-li-p {
   font-family: "Raleway", sans-serif;
   font-weight: 400;
 }
-
 .past-about .past-about-ul .past-about-li:nth-child(1) {
   background-image: linear-gradient(rgba(236, 82, 66, 0.7), rgba(236, 82, 66, 0.7)), url(../../../assets/png/concert2.jpg);
   background-size: cover;
 }
-
 .past-about .past-about-ul .past-about-li:nth-child(2) {
   background-image: linear-gradient(rgba(236, 82, 66, 0.6), rgba(236, 82, 66, 0.6)), url(../../../assets/png/concert2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-}
+}/*# sourceMappingURL=style.css.map */
